--- a/index.html
+++ b/index.html
@@ -612,14 +612,14 @@ footer p{
         <a href="https://www.linkedin.com/in/bhargava-reddy-b319042b7?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><button class="btn">Hire Me</button></a>
         </div>
         <div class="hero-img">
-            <img src="C:\Users\bhaveen reddy\Downloads\pass photo.jpg.jpeg" alt="profile photo">
+            <img src="pass photo.jpg.jpeg" alt="profile photo">
         </div>
 
 
     </section>
     <div class="container ">
         <h1 id="about">About Me</h1>
-        <img src="C:\Users\bhaveen reddy\Downloads\pass photo.jpg.jpeg" alt="profile picture" class="profile">
+        <img src="pass photo.jpg.jpeg" alt="profile picture" class="profile">
         <h2>Java Developer!</h2>
         <p><h1 id="typ">I'm <span class="Bhargava Reddy">Bhargava Reddy</span> and I'm a <span class="fre"></span></h1></p>
         <div class="p">
