--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@ footer p{
                     <h3>Portfolio</h3>
 
 <p>It's all about my portfolio</p>
-                    <a href="link" target="_blank">&#x2192;</a>
+                    <a href="https://bhargava-reddy-9676.github.io/bhargava/" target="_blank">&#x2192;</a>
                 </div>
             </div>
             <div>
