--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@ footer p{
         <a href="https://www.linkedin.com/in/bhargava-reddy-b319042b7?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><button class="btn">Hire Me</button></a>
         </div>
         <div class="hero-img">
-            <img src=""C:\Users\bhaveen reddy\Downloads\Bhargavamb.jpeg"" alt="profile photo">
+            <img src="C:\Users\bhaveen reddy\Downloads\Bhargavamb.jpeg" alt="profile photo">
         </div>
 
 
