--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@ footer p{
     </section>
     <div class="container ">
         <h1 id="about">About Me</h1>
-        <img src="pass photo.jpg.jpeg" alt="profile picture" class="profile">
+        <img src="C:\Users\bhaveen reddy\Downloads\Bhargavamb.jpeg" alt="profile picture" class="profile">
         <h2>Java Developer!</h2>
         <p><h1 id="typ">I'm <span class="Bhargava Reddy">Bhargava Reddy</span> and I'm a <span class="fre"></span></h1></p>
         <div class="p">
